[package]
name = "vitte-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["."]

[package.metadata]
cargo-fuzz = true

[dependencies]
# Ajoute ici des deps si tu relies directement à des crates Vitte (optionnel)

[dev-dependencies]
libfuzzer-sys = "0.4"

[features]
# Active les shims si les APIs ne correspondent pas.
shims = []

[[bin]]
name = "fuzz_dummy"
path = "fuzz_targets/_do_not_run.rs"
test = false
bench = false
doc = false
