[workspace]
resolver = "2"
members = [
  "crates/vitte_common",
  "crates/vitte_unicode",
  "crates/vitte_regex",
  "crates/vitte_muf",
  "crates/vitte_rust_api",
  "crates/vitte_fmt",
  "crates/vitte_lsp",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["vitte"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
