# vitte/rust/Cargo.toml
#
# Rust workspace for Vitte.
#
# Principles:
#   - Tools as separate crates (fmt, lsp)
#   - Libraries reusable by tools/runtime (common, muf, regex, unicode)
#   - Single C ABI surface crate (vitte_rust_api)
#
# Build:
#   cargo build --workspace
#   cargo test  --workspace
#
# Binaries:
#   cargo run -p vitte_fmt -- --help
#   cargo run -p vitte_lsp
#
# FFI:
#   cargo build -p vitte_rust_api --release

[workspace]
resolver = "2"

members = [
  "crates/vitte_common",
  "crates/vitte_muf",
  "crates/vitte_fmt",
  "crates/vitte_lsp",
  "crates/vitte_regex",
  "crates/vitte_unicode",
  "crates/vitte_rust_api",
]

default-members = [
  "crates/vitte_common",
  "crates/vitte_muf",
  "crates/vitte_fmt",
  "crates/vitte_lsp",
  "crates/vitte_regex",
  "crates/vitte_unicode",
  "crates/vitte_rust_api",
]

# Optional: centralize shared dependency versions here (Cargo 1.64+ supports this)
[workspace.dependencies]
vitte_common  = { path = "crates/vitte_common" }
vitte_muf     = { path = "crates/vitte_muf" }
vitte_regex   = { path = "crates/vitte_regex" }
vitte_unicode = { path = "crates/vitte_unicode" }
vitte_rust_api= { path = "crates/vitte_rust_api" }

tokio     = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20"
url       = "2"

regex     = "1"
bitflags  = "2"

unicode-normalization = "0.1"
unicode-segmentation  = "1"

[profile.dev]
debug = 2
opt-level = 0
panic = "unwind"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

# Optional: faster CI builds without full LTO
[profile.release-ci]
inherits = "release"
lto = "thin"
codegen-units = 8
strip = "symbols"
